# work_code-review_labs

./: readme.md
debugger/: CMakeLists.txt  Debugger.cpp  Debugger.h  Processor.cpp  Processor.h  StructuresProcessor.h  main.cpp
interpreter/: Assembly.cpp  Assembly.h  CMakeLists.txt  MathInterpreter.cpp  MathInterpreter.h  ParseData.cpp  ParseData.h  Processor.cpp  Processor.h  Structures.h  StructuresProcessor.h  main.cpp
interpreter/examples/: file.txt  file2.txt  file3.txt  file4.txt  first5.txt
macro_asm/: .gitignore  asm_tools.py  bbb  ddd  expression_eval.py  in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  in6.txt  macro_assembly.py  macro_test.txt  module.txt  out.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  parser_tools.py  readme.md
